--- a/locales/id.json
+++ b/locales/id.json
@@ -277,7 +277,8 @@
     "inputEmailPlaceholder": "Masukan email Anda",
     "submitError": "Gagal berlangganan",
     "submitSuccess": "Success berlangganan",
-    "subscribe": "Berlangganan"
+    "subscribe": "Berlangganan",
+    "close": "Tidak, nanti saja"
   },
   "notificationOptIn": {
     "checkboxLabel": "Saya ingin menerima status pesanan melalui media sosial",
