--- a/locales/id.json
+++ b/locales/id.json
@@ -676,7 +676,7 @@
     "from": "dari",
     "inputPlaceholder": "0810 0000 0000",
     "inputWhatsApp": "Masukan nomor Whatsapp Anda untuk masuk ke toko kami",
-    "insertVerificationCode": "Masukkan kode verifikasi (OTP)",
+    "insertVerificationCode": "Verifikasi Nomor Anda",
     "loginWithAnotherMethod": "Masuk menggunakan metode lain",
     "notReceivedMessage": "Belum terima pesan?",
     "noWhatsApp": "Tidak memiliki whatsapp?",
