--- a/locales/en.json
+++ b/locales/en.json
@@ -550,7 +550,8 @@
     "successConfPassword": "Password reset succesfully!",
     "title": "Register",
     "toLogin": "Login",
-    "verificationFailed": "Verification failed"
+    "verificationFailed": "Verification failed",
+    "whatsapp": "Whatsapp"
   },
   "resetPassword": {
     "enterEmailBody": "Please enter the e-mail that has been registered. We will send you an invitation link to reset your password.",
