fix: change wording

--- a/locales/en.json
+++ b/locales/en.json
@@ -183,7 +183,7 @@
     "backHome": "Back to Home",
     "change": "Change",
     "changeCart": "Change Cart",
-    "checkoutTitle": "Checkout",
+    "checkoutTitle": "Check Order",
     "continueShopping": "Continue Shopping",
     "error": "Error",
     "loading": "Loading",
