--- a/locales/id.json
+++ b/locales/id.json
@@ -183,7 +183,7 @@
     "backHome": "Kembali ke Halaman Utama",
     "change": "Ubah",
     "changeCart": "Ubah Keranjang",
-    "checkoutTitle": "Selesaikan Pesanan",
+    "checkoutTitle": "Periksa Pesanan",
     "continueShopping": "Lanjutkan Berbelanja",
     "error": "Terjadi kesalahan",
     "loading": "Memuat",
