fix: fix place order

--- a/locales/id.json
+++ b/locales/id.json
@@ -407,7 +407,7 @@
     "orderSummary": "Ringkasan Pesanan",
     "shipToDiffAddress": "Kirim ke alamat berbeda?",
     "signUp": "Daftarkan akun baru",
-    "userInformation": "Informasi"
+    "userInformation": "Informasi Pengiriman"
   },
   "product": {
     "additionalInfo": "Informasi tambahan",
