fix: change wording

--- a/locales/id.json
+++ b/locales/id.json
@@ -438,7 +438,7 @@
     "next": "Selanjutnya",
     "noRelated": "Tidak ada product yang berkaitan",
     "notFound": "Produk tidak ditemukan!",
-    "notify": "Kabari saya nanti",
+    "notify": "Kabari Saya Nanti",
     "notifyError": "Terjadi kendala saat mengaktifkan pengingat untuk produk ini, coba kembali beberapa saat lagi.",
     "notifySuccess": "Terima kasih telah tertarik pada produk ini, kami akan kabari melalui kontak yang anda berikan jika produk telah tersedia.",
     "notifyTitleError": "Gagal memberi pemberitahuan",
