--- a/locales/en.json
+++ b/locales/en.json
@@ -438,7 +438,7 @@
     "next": "Next",
     "noRelated": "No related products!",
     "notFound": "Product not found!",
-    "notify": "Notify me later",
+    "notify": "Notify Me Later",
     "notifyError": "There was a problem activating reminders for this product, please try again later.",
     "notifySuccess": "Thank you for being interested in this product, we will notify you via the contact you provide when the product is available.",
     "notifyTitleError": "Failed to notify",
