fix: modified shipping method

--- a/locales/en.json
+++ b/locales/en.json
@@ -594,7 +594,7 @@
     "shippingMethod": "Shipping Method",
     "subtitleContactInfo": "*a bill will be sent to this contact",
     "subtitleShipTo": "*your order will be shipped",
-    "title": "Shipping",
+    "title": "Delivery Courier",
     "track": "Track your order",
     "trackDriver": "Track Driver",
     "updatePinpoint": "Change Location Pin"
