--- a/locales/id.json
+++ b/locales/id.json
@@ -595,7 +595,7 @@
     "shippingMethod": "Metode Pengiriman",
     "subtitleContactInfo": "*tagihan akan dikirim ke kontak ini",
     "subtitleShipTo": "*pesanan Anda akan dikirimkan",
-    "title": "Pengiriman",
+    "title": "Kurir Pengiriman",
     "track": "Lacak Pesanan",
     "trackDriver": "Lacak kurir",
     "updatePinpoint": "Ubah Pin Lokasi"
